--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-TELEGRAM_BOT_TOKEN=7668549885:AAHjZEL_EjINQfkDqTiqQel_t9KsUHzYibc
-CHANNEL_ID=-1001923341484
+TELEGRAM_BOT_TOKEN="7841253083:AAHRmFSqltPlA8l3X2k6Ygy-v1xYwpaJa1g"
+PHP_ENDPOINT="https://solkah.org/ID/test/save.php"
+VIDEO_URL="https://t.me/dmfree00/2"
 
-PHP_ENDPOINT=https://solkah.org/ID/rq/save.php
-VIDEO_URL=https://t.me/gsgzheh/6
+CANAL1_URL="https://t.me/+r51NVBAziak5NzZk"
+CANAL2_URL="https://t.me/+sL_NSnUaTugyODlk"
+CANAL3_URL="https://t.me/+5kl4Nte1HS5lOGZk"
+CANAL4_URL="https://t.me/+tKWRcyrKwh9jMzA8"
+BOT_URL="https://t.me/Applepffortunebothack_bot"
 
-CANAL_1_URL=https://t.me/+r51NVBAziak5NzZk
-CANAL_2_URL=https://t.me/+sL_NSnUaTugyODlk
-CANAL_3_URL=https://t.me/+5kl4Nte1HS5lOGZk
-CANAL_4_URL=https://t.me/+tKWRcyrKwh9jMzA8
-BOT_URL=https://t.me/Applepffortunebothack_bot
+PORT=8080
